# pytorch-yard

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-pypi.yml
examples/pytorch-mnist/: environment.yml  requirements.txt  train.py
examples/pytorch-mnist/pytorch_mnist/cfg/: __init__.py  default.yaml
src/pytorch_yard/: __init__.py  core.py
src/pytorch_yard/avalanche/: __init__.py  logger.py  scenarios.py  wandb.py
src/pytorch_yard/configs/: __init__.py  register.py
src/pytorch_yard/configs/cfg/: __init__.py  lightning.py
src/pytorch_yard/configs/hydra/hydra_logging/: rich.yaml
src/pytorch_yard/configs/hydra/job_logging/: rich.yaml
src/pytorch_yard/experiments/: avalanche.py  lightning.py  pytorch.py
src/pytorch_yard/lightning/: __init__.py  wandb.py
src/pytorch_yard/utils/: __init__.py  logging.py  rundir.py
