[metadata]
name = pytorch-yard
version = attr: pytorch_yard.__version__
description = PyTorch experiment runner
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Karol J. Piczak
author_email = karol@piczak.com
url = https://github.com/karolpiczak/pytorch-yard
license = MIT
license_file = LICENSE
platform = any
keywords = neural networks, PyTorch, PyTorch Lightning, Hydra, wandb, code template
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/karolpiczak/pytorch-yard/issues

[options]
include_package_data = True
packages = find:
package_dir =
    = src
scripts =
install_requires =
    coolname
    hydra-configs-pytorch-lightning
    # hydra-configs-torch @ git+https://github.com/pytorch/hydra-torch/#subdirectory=hydra-configs-torch
    # hydra-configs-torchvision @ git+https://github.com/pytorch/hydra-torch/#subdirectory=hydra-configs-torchvision
    hydra-core >= 1.1.0
    pytest
    python-dotenv
    pytorch-lightning-bolts >= 0.3.2
    pytorch-lightning >= 1.3.8
    rich
    setproctitle
    torchstat
    torchsummary
    tqdm
    typer
    wandb
python_requires = >= 3.9

[options.packages.find]
where = src